# treasure-hunters

./: .env.example  .gitignore  CMakeLists.txt  config.json  log
arduino/: arduino.ino
assets/: mapa_agua.csv  mapa_borda_floresta.csv  mapa_caminho.csv  mapa_casas.csv  mapa_fundo_grama.csv  mapa_nascente_agua.csv  mapa_pedras_arbustos.csv  mapa_pontes.csv  mapa_tesouros.csv
src/: game_manager.h  game_object.h  layer.h  main.cpp  main_old.cpp  map_manager.h  object_factory.h  player.h  settings.h  sprites.h  treasure.h
src/api/: api_client.h
src/managers/: game_manager.h  map_manager.h  serial_port.cpp  serial_port.h
src/objects/: chest.h  collidable.h  game_object.cpp  game_object.h  house_slot.h  player.h  treasure.h
src/screens/: game_over_info.h  game_over_screen.cpp  game_over_screen.h  game_screen.cpp  game_screen.h  screen.h
src/utils/: assets.h  darken_background.h  draw_text.h  format_time.h  layer.h  object_factory.h  player_type.h  position.h  settings.h
